reasoning_transformations/CRUXEval/Transformations/logs/sample_577.log
STARTING AT 2024-10-19 23:35:44.801288
[START] processing file: sample_577
*Running tests for: sample_577
 
Result: ['tests_pass']
tests_pass sample_577 /home/yang/Benchmark/dataset/cruxeval/code//sample_577.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_577
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_577
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_577
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_577", line 8
    nonlocal newitems_1, d
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'd' found

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_577", line 8\n    nonlocal newitems_1, d\n    ^^^^^^^^^^^^^^^^^^^^^^\nSyntaxError: no binding for nonlocal \'d\' found\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_577
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_577
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_577
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_577
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_577
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_577
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_577
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_577
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/951a917df7397c9cb698ead54386db6d1db4ffb0/Transformation/sample_577.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/951a917df7397c9cb698ead54386db6d1db4ffb0/Transformation/sample_577.py
*Running tests for: sample_577
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/951a917df7397c9cb698ead54386db6d1db4ffb0/Transformation/sample_577.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_577',
  'genetic_algorithm': None,
  'original_code': 'def f(items):\n'
                   '    result = []\n'
                   '    for number in items:\n'
                   '        d = dict(items).copy()\n'
                   '        d.popitem()\n'
                   '        result.append(d)\n'
                   '        items = d\n'
                   '    return result',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/951a917df7397c9cb698ead54386db6d1db4ffb0/Transformation/sample_577.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_577.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/951a917df7397c9cb698ead54386db6d1db4ffb0/Transformation/sample_577.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 5.729593,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      "    parse('2024-10-19 23:35:49')\n"
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(newitems_1):\n'
                      "    base64.b64encode(b'69707522957412852333')\n"
                      '    shuffle([61, 47, 58])\n'
                      '    ttest_ind([30, 54, 92], [84, 40, 59])\n'
                      '    datetime.datetime.now()\n'
                      '    time.sleep(0.17)\n'
                      '    Fernet.generate_key()\n'
                      '    try:\n'
                      '        result = [[]][0]\n'
                      '        LoopChecker13 = 79\n'
                      '        LoopChecker23 = 78\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker13, LoopChecker23)):\n'
                      '            for number in newitems_1:\n'
                      '                d = dict(newitems_1).copy()\n'
                      '                d.popitem()\n'
                      '                result.append(d)\n'
                      '                newitems_1 = d\n'
                      '        else:\n'
                      '            pass\n'
                      '        return result\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_577. Total Time: 5.729593
END AT 2024-10-19 23:35:50.531943
